fix gap above mobile menu, shrink fonts in header block on mobile

--- a/themes/irondale-brewing/static/css/main.css
+++ b/themes/irondale-brewing/static/css/main.css
@@ -971,9 +971,9 @@ div[data-stork="sitesearch-output"]:empty {
 }
 
 @media (max-width: 980px) {
-    #page-container {
+    /*#page-container {
         padding-top: 0 !important;
-    }
+    }*/
     .header-row, .nav-column {
         padding: 30px 0;
         max-width: 1080px;
@@ -992,6 +992,14 @@ div[data-stork="sitesearch-output"]:empty {
 }
 
 @media (max-width: 960px) {
+    .page-header-content h1 {
+        font-size: 60px !important;
+    }
+
+    .page-header-content h4 {
+        font-size: 16px !important;
+    }
+
     .menu-section {
         /* Ensure the menu bar can contain the absolutely positioned mobile menu */
         position: relative;
@@ -1070,8 +1078,8 @@ div[data-stork="sitesearch-output"]:empty {
         top: 100%; 
         left: 0;
         width: 100%;
-        margin: 0;
-        padding: 0;
+        margin: 0 !important;
+        padding: 0 !important;
         z-index: 999; 
     }
 
